@@ -1,3 +1,9 @@
+redis (6:6.2.6-3rl1~@RELEASE@1) @RELEASE@; urgency=low
+
+  * Add Ubuntu impish.
+
+ -- Redis Team <redis@redis.io>  Tue, 16 Nov 2021 21:10:32 +0200
+
 redis (6:6.2.6-2rl1~@RELEASE@1) @RELEASE@; urgency=low
 
   * Add Ubuntu impish.
